# snap

./: .gitignore  CMakeLists.txt  README.md
snap-adv/: CMakeLists.txt
snap-core/: CMakeLists.txt
test/: CMakeLists.txt
